# my_r1mini_pkgs

./: CMakeLists.txt  README.md  find_obj.py  package.xml  setup.py
src/scripts/: find_obj.py  find_up.py  test1.py  test2.py
